--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,19 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fffffffb;
+  --foreground: #A9A9A9;
+  --primary:#B22222;
+  --secondary: #dad9d9;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: black;
+    --foreground: #f2f4f5;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--background);
+  background: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  background-color:var(--primary);
+}
+a:hover{
+  background-color: var(--foreground);
 }
